@@ -1,9 +1,8 @@
 package com.jgy36.PoliticalApp.service;
 
-import com.jgy36.PoliticalApp.entity.Follow;
 import com.jgy36.PoliticalApp.entity.User;
-import com.jgy36.PoliticalApp.repository.FollowRepository;
 import com.jgy36.PoliticalApp.repository.UserRepository;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
@@ -13,44 +12,47 @@ import java.util.stream.Collectors;
 @Service
 public class FollowService {
 
-    private final FollowRepository followRepository;
     private final UserRepository userRepository;
 
-    public FollowService(FollowRepository followRepository, UserRepository userRepository) {
-        this.followRepository = followRepository;
+    public FollowService(UserRepository userRepository) {
         this.userRepository = userRepository;
     }
 
-    public void followUser(Long userIdToFollow) {
-        String currentUserEmail = SecurityContextHolder.getContext().getAuthentication().getName();
-        User currentUser = userRepository.findByEmail(currentUserEmail)
+    private User getAuthenticatedUser() {
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        return userRepository.findByEmail(auth.getName())
                 .orElseThrow(() -> new IllegalArgumentException("User not found"));
-        User userToFollow = userRepository.findById(userIdToFollow)
-                .orElseThrow(() -> new IllegalArgumentException("User to follow not found"));
-
-        if (!followRepository.existsByFollowerAndFollowing(currentUser, userToFollow)) {
-            followRepository.save(new Follow(currentUser, userToFollow));
-        }
     }
 
-    public void unfollowUser(Long userIdToUnfollow) {
-        String currentUserEmail = SecurityContextHolder.getContext().getAuthentication().getName();
-        User currentUser = userRepository.findByEmail(currentUserEmail)
+    public void followUser(Long userId) {
+        User currentUser = getAuthenticatedUser();
+        User userToFollow = userRepository.findById(userId)
                 .orElseThrow(() -> new IllegalArgumentException("User not found"));
-        User userToUnfollow = userRepository.findById(userIdToUnfollow)
-                .orElseThrow(() -> new IllegalArgumentException("User to unfollow not found"));
 
-        followRepository.deleteByFollowerAndFollowing(currentUser, userToUnfollow);
+        if (currentUser.equals(userToFollow)) {
+            throw new IllegalArgumentException("You cannot follow yourself.");
+        }
+
+        currentUser.getFollowing().add(userToFollow);
+        userRepository.save(currentUser);
+    }
+
+    public void unfollowUser(Long userId) {
+        User currentUser = getAuthenticatedUser();
+        User userToUnfollow = userRepository.findById(userId)
+                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+
+        currentUser.getFollowing().remove(userToUnfollow);
+        userRepository.save(currentUser);
     }
 
     public List<Long> getFollowingIds() {
-        String currentUserEmail = SecurityContextHolder.getContext().getAuthentication().getName();
-        User currentUser = userRepository.findByEmail(currentUserEmail)
-                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+        User currentUser = getAuthenticatedUser();
 
-        return followRepository.findByFollower(currentUser)
-                .stream()
-                .map(follow -> follow.getFollowing().getId())
-                .collect(Collectors.toList());
+        // ✅ FIX: Use Collectors.toList() instead of .toList()
+        return currentUser.getFollowing().stream()
+                .map(User::getId)
+                .collect(Collectors.toList()); // ✅ FIXED HERE
     }
 }
+
